--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,23 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+
+[fuzz]
+
+seed = "0x1"
+
+[invariant]
+runs = 3000
+depth = 64
+fail_on_revert = true
+
+[fmt]
+bracket_spacing = true
+int_types = "long"
+line_length = 120
+wrap_comments = true
+multiline_func_header = "all"
+
 remappings = [
     '@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts',
 ]
